pkg/validator/testdata/policy/simple-rule.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-label
spec:
  validations:
    - expression: "has(request.object.metadata.labels['env'])"
  failurePolicy: Fail
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: require-label-binding
spec:
  policyName: require-label
  paramRef:
    name: ""
  matchResources:
    namespaceSelector: {}
    objectSelector: {}
